# socow-vector

./: CMakeLists.txt  CMakePresets.json  README.md  init-repo.sh  update-repo.sh  vcpkg.json
.github/workflows/: cpp.yml
ci-extra/: build.sh  set-upstream.sh  test-valgrind.sh  test.sh
src/: shared-data.h  socow-vector.h  solution.h  static-data.h  vector.h
test/: .clang-format  dummy-test.cpp  element.cpp  element.h  test-utils.h  traits-test.cpp  vector-test.cpp
